fix; overflow due to  AOS

--- a/app/globals.css
+++ b/app/globals.css
@@ -20,7 +20,6 @@
 
 body {
   font-family: var(--font-inter);
-   overflow-x: hidden;
 }
 
 h1, h2, h3, h4, h5, h6 {
